Improve CLI error model and off-heap foreign capability probe